tests/ui/structs/default-field-values/do-not-ice-on-invalid-lifetime.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/do-not-ice-on-invalid-lifetime.rs:3:12
   |
LL |     x: Vec<A> = Vec::new(),
   |            ^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL |     x: Vec<A<'a>> = Vec::new(),
   |             ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
